--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.sep21">
    <application
-        android:label="sep21"
+        android:label="CY-Seating"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
