--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   carousel_pro: ^1.0.0
   flutter_swiper: ^1.1.6
   fluttertoast: ^8.0.8
+  cached_network_image: ^3.2.0
 
 dev_dependencies:
   flutter_test:
