--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_swiper: ^1.1.6
   fluttertoast: ^8.0.8
   cached_network_image: ^3.2.0
+  wave: ^0.2.0
 
 dev_dependencies:
   flutter_test:
