--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   fluttertoast: ^8.0.8
   cached_network_image: ^3.2.0
   wave: ^0.2.0
+  image_picker: ^0.8.4+4
 
 dev_dependencies:
   flutter_test:
