--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   cached_network_image: ^3.2.0
   wave: ^0.2.0
   image_picker: ^0.8.4+4
+  firebase_auth: ^3.3.4
+  firebase_core: ^1.10.6
 
 dev_dependencies:
   flutter_test:
