--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   firebase_core: ^1.10.6
   google_sign_in: ^5.2.1
   cloud_firestore: ^3.1.6
+  firebase_storage: ^10.2.5
 
 dev_dependencies:
   flutter_test:
