--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   google_sign_in: ^5.2.1
   cloud_firestore: ^3.1.6
   firebase_storage: ^10.2.5
+  gradient_widgets: ^0.6.0
 
 dev_dependencies:
   flutter_test:
