--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   cloud_firestore: ^3.1.6
   firebase_storage: ^10.2.5
   gradient_widgets: ^0.6.0
+  icon_picker: ^2.0.1
+  date_format: ^2.0.5
+  uuid: ^3.0.5
 
 dev_dependencies:
   flutter_test:
