--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   flutter_stripe: ^2.1.1
   http: ^0.13.4
   share_plus: ^3.0.4
+  jiffy: ^5.0.0
 
 dev_dependencies:
   flutter_test:
