--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   http: ^0.13.4
   share_plus: ^3.0.4
   jiffy: ^5.0.0
+  flat_icons_flutter: ^1.0.2
 
 dev_dependencies:
   flutter_test:
