--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   data_connection_checker: ^0.3.4
   another_flushbar: ^1.10.28
   firebase_messaging: ^11.2.6
+  flutter_local_notifications: ^9.3.1
 
 dev_dependencies:
   flutter_test:
