--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,8 @@ dependencies:
   firebase_messaging: ^11.2.6
   flutter_local_notifications: ^9.3.1
   wiredash: ^0.7.0+1
+  qr_flutter: ^4.0.0
+  crypto: ^3.0.1
 
 dev_dependencies:
   flutter_test:
