--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,8 @@ dependencies:
   wiredash: ^0.7.0+1
   qr_flutter: ^4.0.0
   crypto: ^3.0.1
+  add_2_calendar: ^2.1.3
+  focused_menu: ^1.0.5
 
 dev_dependencies:
   flutter_test:
