--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,10 @@ dependencies:
   crypto: ^3.0.1
   add_2_calendar: ^2.1.3
   focused_menu: ^1.0.5
+  flutter_slidable: ^1.2.0
+  smart_select: ^4.3.2
+  path_provider: ^2.0.9
+  ticketview: ^1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -111,6 +115,8 @@ flutter:
     - assets/images/logos (2).png
     - assets/images/logos (4).png
     - assets/images/logos-removebg.png
+    - assets/images/default.jpg
+    - assets/images/us.jpg
 
 
 
