--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ dependencies:
   smart_select: ^4.3.2
   path_provider: ^2.0.9
   ticketview: ^1.0.0
+  flutter_launcher_icons: ^0.9.2
 
 dev_dependencies:
   flutter_test:
@@ -119,7 +120,10 @@ flutter:
     - assets/images/us.jpg
 
 
-
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/logos-removebg.png"
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
